openexr-c/include/imf_attribute.h

typedef struct Imath_3_0__Vec3_int__t_s Imath_3_0__Vec3_int__t;
typedef Imath_3_0__Vec3_int__t Imath_V3i_t;
typedef struct Imath_3_0__Vec3_float__t_s Imath_3_0__Vec3_float__t;
typedef Imath_3_0__Vec3_float__t Imath_V3f_t;
typedef struct Imath_3_0__Vec3_double__t_s Imath_3_0__Vec3_double__t;
typedef Imath_3_0__Vec3_double__t Imath_V3d_t;
typedef struct Imf_3_0__OStream_t_s Imf_3_0__OStream_t;
typedef Imf_3_0__OStream_t Imf_OStream_t;
typedef struct Imf_3_0__IStream_t_s Imf_3_0__IStream_t;
typedef Imf_3_0__IStream_t Imf_IStream_t;
typedef struct Imf_3_0__Attribute_t_s {
    char _unused;
} OPENEXR_CPPMM_ALIGN(8) Imf_3_0__Attribute_t;
typedef Imf_3_0__Attribute_t Imf_Attribute_t;
typedef struct Imf_3_0__TypedAttribute_Imath__V3i__t_s {
    char _unused;
} OPENEXR_CPPMM_ALIGN(8) Imf_3_0__TypedAttribute_Imath__V3i__t;
typedef Imf_3_0__TypedAttribute_Imath__V3i__t Imf_V3iAttribute_t;
typedef struct Imf_3_0__TypedAttribute_Imath__V3f__t_s {
    char _unused;
} OPENEXR_CPPMM_ALIGN(8) Imf_3_0__TypedAttribute_Imath__V3f__t;
typedef Imf_3_0__TypedAttribute_Imath__V3f__t Imf_V3fAttribute_t;
typedef struct Imf_3_0__TypedAttribute_Imath__V3d__t_s {
    char _unused;
} OPENEXR_CPPMM_ALIGN(8) Imf_3_0__TypedAttribute_Imath__V3d__t;
typedef Imf_3_0__TypedAttribute_Imath__V3d__t Imf_V3dAttribute_t;
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__copy(
    Imf_V3iAttribute_t const * this_
    , Imf_Attribute_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__writeValueTo(
    Imf_V3iAttribute_t const * this_
    , Imf_OStream_t * os
    , int version);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__readValueFrom(
    Imf_V3iAttribute_t * this_
    , Imf_IStream_t * is
    , int size
    , int version);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__copyValueFrom(
    Imf_V3iAttribute_t * this_
    , Imf_Attribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__newAttribute(
    Imf_Attribute_t * * return_
    , char const * typeName);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__knownType(
    _Bool * return_
    , char const * typeName);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__ctor(
    Imf_V3iAttribute_t * * this_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__from_value(
    Imf_V3iAttribute_t * * this_
    , Imath_V3i_t const * value);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__ctor_copy(
    Imf_V3iAttribute_t * * this_
    , Imf_V3iAttribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__dtor(
    Imf_V3iAttribute_t * this_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__assign(
    Imf_V3iAttribute_t * this_
    , Imf_V3iAttribute_t * * return_
    , Imf_V3iAttribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__value(
    Imf_V3iAttribute_t * this_
    , Imath_V3i_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__value_const(
    Imf_V3iAttribute_t const * this_
    , Imath_V3i_t const * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__staticTypeName(
    char const * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__makeNewAttribute(
    Imf_Attribute_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__cast_ptr(
    Imf_V3iAttribute_t * * return_
    , Imf_Attribute_t * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__cast_ptr_const(
    Imf_V3iAttribute_t const * * return_
    , Imf_Attribute_t const * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__cast(
    Imf_V3iAttribute_t * * return_
    , Imf_Attribute_t * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__cast_const(
    Imf_V3iAttribute_t const * * return_
    , Imf_Attribute_t const * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__registerAttributeType();
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3i__unRegisterAttributeType();
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__typeName(
    Imf_V3fAttribute_t const * this_
    , char const * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__copy(
    Imf_V3fAttribute_t const * this_
    , Imf_Attribute_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__writeValueTo(
    Imf_V3fAttribute_t const * this_
    , Imf_OStream_t * os
    , int version);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__readValueFrom(
    Imf_V3fAttribute_t * this_
    , Imf_IStream_t * is
    , int size
    , int version);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__copyValueFrom(
    Imf_V3fAttribute_t * this_
    , Imf_Attribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__newAttribute(
    Imf_Attribute_t * * return_
    , char const * typeName);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__knownType(
    _Bool * return_
    , char const * typeName);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__ctor(
    Imf_V3fAttribute_t * * this_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__from_value(
    Imf_V3fAttribute_t * * this_
    , Imath_V3f_t const * value);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__ctor_copy(
    Imf_V3fAttribute_t * * this_
    , Imf_V3fAttribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__dtor(
    Imf_V3fAttribute_t * this_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__assign(
    Imf_V3fAttribute_t * this_
    , Imf_V3fAttribute_t * * return_
    , Imf_V3fAttribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__value(
    Imf_V3fAttribute_t * this_
    , Imath_V3f_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__value_const(
    Imf_V3fAttribute_t const * this_
    , Imath_V3f_t const * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__staticTypeName(
    char const * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__makeNewAttribute(
    Imf_Attribute_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__cast_ptr(
    Imf_V3fAttribute_t * * return_
    , Imf_Attribute_t * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__cast_ptr_const(
    Imf_V3fAttribute_t const * * return_
    , Imf_Attribute_t const * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__cast(
    Imf_V3fAttribute_t * * return_
    , Imf_Attribute_t * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__cast_const(
    Imf_V3fAttribute_t const * * return_
    , Imf_Attribute_t const * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__registerAttributeType();
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3f__unRegisterAttributeType();
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__typeName(
    Imf_V3dAttribute_t const * this_
    , char const * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__copy(
    Imf_V3dAttribute_t const * this_
    , Imf_Attribute_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__writeValueTo(
    Imf_V3dAttribute_t const * this_
    , Imf_OStream_t * os
    , int version);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__readValueFrom(
    Imf_V3dAttribute_t * this_
    , Imf_IStream_t * is
    , int size
    , int version);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__copyValueFrom(
    Imf_V3dAttribute_t * this_
    , Imf_Attribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__newAttribute(
    Imf_Attribute_t * * return_
    , char const * typeName);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__knownType(
    _Bool * return_
    , char const * typeName);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__ctor(
    Imf_V3dAttribute_t * * this_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__from_value(
    Imf_V3dAttribute_t * * this_
    , Imath_V3d_t const * value);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__ctor_copy(
    Imf_V3dAttribute_t * * this_
    , Imf_V3dAttribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__dtor(
    Imf_V3dAttribute_t * this_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__assign(
    Imf_V3dAttribute_t * this_
    , Imf_V3dAttribute_t * * return_
    , Imf_V3dAttribute_t const * other);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__value(
    Imf_V3dAttribute_t * this_
    , Imath_V3d_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__value_const(
    Imf_V3dAttribute_t const * this_
    , Imath_V3d_t const * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__staticTypeName(
    char const * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__makeNewAttribute(
    Imf_Attribute_t * * return_);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__cast_ptr(
    Imf_V3dAttribute_t * * return_
    , Imf_Attribute_t * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__cast_ptr_const(
    Imf_V3dAttribute_t const * * return_
    , Imf_Attribute_t const * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__cast(
    Imf_V3dAttribute_t * * return_
    , Imf_Attribute_t * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__cast_const(
    Imf_V3dAttribute_t const * * return_
    , Imf_Attribute_t const * attribute);
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__registerAttributeType();
OPENEXR_CPPMM_API unsigned int Imf_3_0__TypedAttribute_Imath__V3d__unRegisterAttributeType();