openexr-sys/src/imf_attribute.rs


pub fn Imf_3_0__TypedAttribute_Imath__V3i__copy(this_: *const Imf_V3iAttribute_t, return_: *mut *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__writeValueTo(this_: *const Imf_V3iAttribute_t, os: *mut Imf_OStream_t, version: c_int) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__readValueFrom(this_: *mut Imf_V3iAttribute_t, is: *mut Imf_IStream_t, size: c_int, version: c_int) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__copyValueFrom(this_: *mut Imf_V3iAttribute_t, other: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__newAttribute(return_: *mut *mut Imf_Attribute_t, type_name: *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__knownType(return_: *mut bool, type_name: *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__ctor(this_: *mut *mut Imf_V3iAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__from_value(this_: *mut *mut Imf_V3iAttribute_t, value: *const Imath_V3i_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__ctor_copy(this_: *mut *mut Imf_V3iAttribute_t, other: *const Imf_V3iAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__dtor(this_: *mut Imf_V3iAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__assign(this_: *mut Imf_V3iAttribute_t, return_: *mut *mut Imf_V3iAttribute_t, other: *const Imf_V3iAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__value(this_: *mut Imf_V3iAttribute_t, return_: *mut *mut Imath_V3i_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__value_const(this_: *const Imf_V3iAttribute_t, return_: *mut *const Imath_V3i_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__staticTypeName(return_: *mut *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__makeNewAttribute(return_: *mut *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__cast_ptr(return_: *mut *mut Imf_V3iAttribute_t, attribute: *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__cast_ptr_const(return_: *mut *const Imf_V3iAttribute_t, attribute: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__cast(return_: *mut *mut Imf_V3iAttribute_t, attribute: *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__cast_const(return_: *mut *const Imf_V3iAttribute_t, attribute: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__registerAttributeType() -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3i__unRegisterAttributeType() -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__typeName(this_: *const Imf_V3fAttribute_t, return_: *mut *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__copy(this_: *const Imf_V3fAttribute_t, return_: *mut *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__writeValueTo(this_: *const Imf_V3fAttribute_t, os: *mut Imf_OStream_t, version: c_int) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__readValueFrom(this_: *mut Imf_V3fAttribute_t, is: *mut Imf_IStream_t, size: c_int, version: c_int) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__copyValueFrom(this_: *mut Imf_V3fAttribute_t, other: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__newAttribute(return_: *mut *mut Imf_Attribute_t, type_name: *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__knownType(return_: *mut bool, type_name: *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__ctor(this_: *mut *mut Imf_V3fAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__from_value(this_: *mut *mut Imf_V3fAttribute_t, value: *const Imath_V3f_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__ctor_copy(this_: *mut *mut Imf_V3fAttribute_t, other: *const Imf_V3fAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__dtor(this_: *mut Imf_V3fAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__assign(this_: *mut Imf_V3fAttribute_t, return_: *mut *mut Imf_V3fAttribute_t, other: *const Imf_V3fAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__value(this_: *mut Imf_V3fAttribute_t, return_: *mut *mut Imath_V3f_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__value_const(this_: *const Imf_V3fAttribute_t, return_: *mut *const Imath_V3f_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__staticTypeName(return_: *mut *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__makeNewAttribute(return_: *mut *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__cast_ptr(return_: *mut *mut Imf_V3fAttribute_t, attribute: *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__cast_ptr_const(return_: *mut *const Imf_V3fAttribute_t, attribute: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__cast(return_: *mut *mut Imf_V3fAttribute_t, attribute: *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__cast_const(return_: *mut *const Imf_V3fAttribute_t, attribute: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__registerAttributeType() -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3f__unRegisterAttributeType() -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__typeName(this_: *const Imf_V3dAttribute_t, return_: *mut *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__copy(this_: *const Imf_V3dAttribute_t, return_: *mut *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__writeValueTo(this_: *const Imf_V3dAttribute_t, os: *mut Imf_OStream_t, version: c_int) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__readValueFrom(this_: *mut Imf_V3dAttribute_t, is: *mut Imf_IStream_t, size: c_int, version: c_int) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__copyValueFrom(this_: *mut Imf_V3dAttribute_t, other: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__newAttribute(return_: *mut *mut Imf_Attribute_t, type_name: *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__knownType(return_: *mut bool, type_name: *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__ctor(this_: *mut *mut Imf_V3dAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__from_value(this_: *mut *mut Imf_V3dAttribute_t, value: *const Imath_V3d_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__ctor_copy(this_: *mut *mut Imf_V3dAttribute_t, other: *const Imf_V3dAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__dtor(this_: *mut Imf_V3dAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__assign(this_: *mut Imf_V3dAttribute_t, return_: *mut *mut Imf_V3dAttribute_t, other: *const Imf_V3dAttribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__value(this_: *mut Imf_V3dAttribute_t, return_: *mut *mut Imath_V3d_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__value_const(this_: *const Imf_V3dAttribute_t, return_: *mut *const Imath_V3d_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__staticTypeName(return_: *mut *const c_char) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__makeNewAttribute(return_: *mut *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__cast_ptr(return_: *mut *mut Imf_V3dAttribute_t, attribute: *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__cast_ptr_const(return_: *mut *const Imf_V3dAttribute_t, attribute: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__cast(return_: *mut *mut Imf_V3dAttribute_t, attribute: *mut Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__cast_const(return_: *mut *const Imf_V3dAttribute_t, attribute: *const Imf_Attribute_t) -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__registerAttributeType() -> Exception;

pub fn Imf_3_0__TypedAttribute_Imath__V3d__unRegisterAttributeType() -> Exception;


} // extern "C"
